fix: alignement du portrait

--- a/src/client/components/features/ContratEngagementJeune/Témoignages/Témoignages.module.scss
+++ b/src/client/components/features/ContratEngagementJeune/Témoignages/Témoignages.module.scss
@@ -50,6 +50,10 @@
         grid-area: 2 / 3 / span 4 / span 2;
       }
 
+      .portrait {
+        margin: 0 3em 0 1em;
+      }
+
       .bio {
         margin: 0 0 0 $gutter;
       }
